--- a/RecipeShareMe/Base.lproj/Main.storyboard
+++ b/RecipeShareMe/Base.lproj/Main.storyboard
@@ -30,8 +30,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vPi-0k-hID" customClass="FancyView" customModule="RecipeShareMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Recipe Share" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCI-bj-17m">
-                                        <rect key="frame" x="60" y="8" width="229" height="84"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Share" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCI-bj-17m">
+                                        <rect key="frame" x="86.5" y="8" width="202.5" height="84"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="84" id="LeX-tm-nGG"/>
                                         </constraints>
@@ -157,17 +157,22 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7bj-dV-4Sp" customClass="FancyView" customModule="RecipeShareMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="hXd-pf-eik">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="hXd-pf-eik">
                                         <rect key="frame" x="8" y="24" width="51" height="52"/>
+                                        <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="51" id="9cg-3U-Ef8"/>
                                             <constraint firstAttribute="height" constant="52" id="ppo-05-aWQ"/>
                                         </constraints>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="aCY-Jl-2Kp" appends="YES" id="5eS-ie-54K"/>
+                                        </connections>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="twq-cv-Fpa">
-                                        <rect key="frame" x="95" y="18" width="155" height="56"/>
+                                        <rect key="frame" x="121" y="24" width="119" height="52"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="56" id="yDK-o7-tRp"/>
+                                            <constraint firstAttribute="width" constant="119" id="qJP-WO-RyC"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="yDK-o7-tRp"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="CarolinaMountainsPersonalUse" family="Carolina Mountains Personal Use" pointSize="34"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.81893857758620692" colorSpace="calibratedRGB"/>
@@ -362,6 +367,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fff-QM-5cZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="aCY-Jl-2Kp">
+                    <connections>
+                        <action selector="signOutPressed:" destination="YCn-e3-O4X" id="8JW-P2-Bte"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="805.60000000000002" y="113.79310344827587"/>
         </scene>
