--- a/RecipeShareMe/Base.lproj/Main.storyboard
+++ b/RecipeShareMe/Base.lproj/Main.storyboard
@@ -267,7 +267,7 @@
                                                                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="lbv-OM-7Rc" customClass="CircleView" customModule="RecipeShareMe" customModuleProvider="target">
+                                                                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="lbv-OM-7Rc" customClass="CircleView" customModule="RecipeShareMe" customModuleProvider="target">
                                                                             <rect key="frame" x="267" y="0.0" width="60" height="60"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="60" id="HP1-wN-4ac"/>
@@ -343,6 +343,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="caption" destination="S98-J6-8ng" id="cYl-9O-SVv"/>
+                                            <outlet property="likeImg" destination="lbv-OM-7Rc" id="VNH-Yt-N3t"/>
                                             <outlet property="likesLbl" destination="YZq-r8-fIQ" id="ei2-fW-vJM"/>
                                             <outlet property="postImg" destination="ieT-np-pQI" id="Rg7-Un-Tx0"/>
                                             <outlet property="profileImg" destination="5h6-46-pwJ" id="sDH-UO-0Dk"/>
